# GitHubCopilotCSharpToPythonDemo

./: .gitignore  MIGRATION_SUMMARY.md  copilot-instructions.md.tmp
.github/prompts/: migrate-csharp-to-python.prompt.md
CSharpRag/: .gitignore  CSharpRagApp.sln
CSharpRag/.github/upgrades/: assessment.csv  assessment.json  assessment.md
CSharpRag/CSharpRagApp/: CSharpRagApp.csproj  Program.cs  README.md  appsettings.json
CSharpRag/CSharpRagApp.Tests/: CSharpRagApp.Tests.csproj  CitationParserTests.cs  ConfigurationServiceTests.cs
CSharpRag/CSharpRagApp/Services/: CitationParser.cs  ConfigurationService.cs
PythonRag/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
PythonRag/python_rag_app/: __init__.py  program.py
PythonRag/python_rag_app/services/: __init__.py  citation_parser.py  configuration_service.py
PythonRag/tests/: __init__.py  test_citation_parser.py  test_configuration_service.py
azure/: azure-pipelines.yaml
