[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-rag-app"
version = "1.0.0"
description = "Python RAG Application using Azure OpenAI"
requires-python = ">=3.8"
dependencies = [
    "azure-ai-openai>=1.0.0b2",
    "azure-identity>=1.19.0",
    "openai>=1.58.1",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
